--- a/src/assets/css/mise-en-page.css
+++ b/src/assets/css/mise-en-page.css
@@ -1,14 +1,23 @@
 /*Toutes les pages*/
-.bloc {
-  margin-top: 20px;
-  height: auto;
-  background-color: var(--bgcolor);
+.Gbloc {
+  height: 80vh;
   border-radius: 10px;
-  border: var(--bordercolor);
-  box-shadow: var(--boxshadowcolor);
   padding: 10px;
   width: 95%;
 }
+
+.Pbloc{
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.fond{
+  background-color: var(--bgcolor);
+  border: var(--bordercolor);
+  box-shadow: var(--boxshadowcolor);
+}
+
 
 hr{
   width: 90%;
@@ -22,7 +31,7 @@ h2{
 
 /*Anniversaire*/
 
-.anniv_container {
+.anniv_container,.mot_container{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,7 +92,7 @@ h2{
 /*Jour*/
 
 .barre {
-  width: 86.5%;
+  width: 89%;
   height: 80px;
   background-color: var(--bgcolor);
   border-radius: 10px;
@@ -119,13 +128,11 @@ h2{
   width: 50px;
 }
 
-/*Mot du jour*/
-
-.trafic_container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.droite > div:nth-child(2) > span{
+  font-size: clamp(2rem, 3vw - 2rem, 3rem);
 }
+
+/*Mot du jour*/
 
 .mot div{
   margin-top: 5px;
@@ -141,7 +148,7 @@ h2{
 .sliderjour {
   margin-top: 20px;
   border-radius: 10px;
-  width: 95%;
+  width: 100%;
   border: var(--bordercolor);
   box-shadow: var(--boxshadowcolor);
 
@@ -153,6 +160,8 @@ h2{
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 75vh;
+  overflow: hidden;
 }
 
 
@@ -228,7 +237,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: inherit;
+  justify-content: space-between;
 }
 
 #mot.bloc,#anniv.bloc{
