--- a/src/assets/css/mise-en-page.css
+++ b/src/assets/css/mise-en-page.css
@@ -2,17 +2,21 @@
 .Gbloc {
   height: 80vh;
   border-radius: 10px;
-  padding: 10px;
   width: 95%;
+  padding: 3% 0;
 }
 
-.Pbloc{
+.Pbloc, .day{
   width: 100%;
   border-radius: 10px;
-  padding: 10px;
+  padding: 3% 0;
 }
 
-.fond{
+
+
+
+
+.fond, .day{
   background-color: var(--bgcolor);
   border: var(--bordercolor);
   box-shadow: var(--boxshadowcolor);
@@ -49,12 +53,48 @@ h2{
   padding-bottom: 5px;
 }
 
+dd{
+font-weight: bold;
+}
+
+.bloc_container_frst{
+  width: 90%;
+}
+
+#demo1 > dl:last-child > span:last-child{
+  display: none;
+}
+
+#demo1 > h2:not(:first-of-type){
+  display: none
+}
+
+#demo1{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-bottom: 4%;
+}
+
+#demo1 h2{
+  width: 100%;
+  text-align: center;
+  margin: 0;
+}
 /*GoogleMap*/
 
 
 .trajet {
-  text-align: center;
-  margin: 15px 0 !important;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+  padding: 7% 0;
+}
+
+#hyundaicolor,.kia{
+  padding-bottom: 4%;
 }
 
 .trajet div {
@@ -82,7 +122,7 @@ h2{
 
 .barre {
   width: 89%;
-  height: 80px;
+  height: 7vh;
   background-color: var(--bgcolor);
   border-radius: 10px;
   border: var(--bordercolor);
@@ -107,11 +147,18 @@ h2{
 }
 
 .change-size-svg {
-  width: 50px;
+  width: 100px;
+  padding-right: 5%;
 }
 
-.droite > div:nth-child(2) > span{
-  font-size: clamp(2rem, 3vw - 2rem, 3rem);
+.anniv_place{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between
+}
+
+.droite > div:nth-child(2) > span, #jour > div > div.gauche > p.gras{
+  font-size: var(--title);
 }
 
 /*Mot du jour*/
@@ -119,6 +166,8 @@ h2{
 .mot div{
   margin-top: 5px;
 }
+
+
 
 /*Slider*/
 
@@ -146,6 +195,77 @@ h2{
   overflow: hidden;
 }
 
+/*Météo*/
+.container{
+  width: 90%;
+  height: 12vw;
+  margin-right:auto;
+  margin-left:auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.day{
+  width: 20%;
+  height: 100%;
+  padding: 0 10px;
+
+}
+
+#meteo .container {
+  margin-top: 50vh;
+  transform: translateY(-50%);
+}
+
+#meteo h1{
+  position: absolute;
+  top: 25vh;
+  left: 50%;
+  width: 100px;
+  margin-left: -50px;
+  transform: translateY(-50%);
+  font-size: var(--title);
+}
+
+.day h2{
+  padding-top: 15px;
+}
+
+
+
+.temp{
+  display: flex;
+  justify-content: space-around;
+  transform: translateY(25%);
+  align-items: center;
+}
+
+.temp img{
+  width: 30%;
+}
+
+.temp p{
+  text-align: center;
+}
+
+.temp span{
+  font-weight: bold;
+  font-size: var(--title);
+}
+
+/*heure*/
+
+.heure{
+  text-align: center;
+  margin-top: 50vh; /* poussé de la moitié de hauteur de viewport */
+  transform: translateY(-50%);
+}
+
+.respheure{
+  width: 350px;
+
+}
 
 /*App*/
 
@@ -171,22 +291,8 @@ body{
   width: 100%;
   height: 100vh;
   background: var(--bg);
-  background-size: 400% 400%;
-  animation: gradient 10s ease infinite;
-}
 
 
-
-@keyframes gradient {
-  0% {
-    background-position: 0 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0 50%;
-  }
 }
 
 /*Background*/
@@ -194,7 +300,6 @@ body{
 #app::before{
   content: '';
   position: fixed;
-  transform: translate(-50%, -50%);
   top: 100%;
   left: 0;
   z-index: -1;
@@ -202,18 +307,12 @@ body{
   height: 1500px;
   border-radius: 50%;
   border: var(--bordercolor);
-  animation: cercle 20s infinite linear;
-}
-
-@keyframes cercle {
-  0%{transform: translate(-50%, -50%);}
-  50%{transform: translate(-30%, -60%);}
-  100%{transform: translate(-50%, -50%);}
 }
 
 .bloc{
   height: 80vh;
 }
+
 
 .col3{
   display: flex;
