--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,35 +9,33 @@
   --heure: clamp(12rem, 24vw - 16rem, 24rem);
   --subtitle: clamp(1rem, 3vw - 2rem, 3rem);
   --paragraphe: clamp(0.75rem, 2.75vw - 2rem, 3rem);
+
 }
 
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --colortext: #DEDEDE;
-    --bgcolor: rgba(54, 54, 54, 0.8);
-    --bg: linear-gradient(-45deg, #0f1011, #212224, #56575d);
-    --bordercolor: solid 1px rgba(222, 222, 222, 0.2);
-    --boxshadowcolor: 30px 10px 75px 1px rgba(0, 0, 0, 0.59);
-  }
+[data-theme="darkMode"] {
+    --colortext: #DEDEDE!important;
+    --bgcolor: rgba(54, 54, 54, 0.8)!important;
+    --bg: linear-gradient(-45deg, #0f1011, #212224, #56575d)!important;
+    --bordercolor: solid 1px rgba(222, 222, 222, 0.2)!important;
+    --boxshadowcolor: 30px 10px 75px 1px rgba(0, 0, 0, 0.59)!important;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
+[data-theme="lightMode"] {
     --colortext: #e75520;
     --bgcolor: #FFFCF7;
     --bg: linear-gradient(-45deg, #fffff4, #fedcc3, #ffe0af);
     --bordercolor: solid 1px rgba(223, 83, 31, 0.40);
     --boxshadowcolor: 30px 10px 75px 1px rgba(223, 83, 31, 0.30);
-  }
 }
+
 
 
 
 body {
   font-family: "Montserrat", sans-serif;
-  color: var(--colortext)
 }
+
 
 h1 {
   font-size: var(--title);
