--- a/src/assets/css/mise-en-page.css
+++ b/src/assets/css/mise-en-page.css
@@ -73,7 +73,6 @@ font-weight: bold;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 4%;
 }
 
 #demo1 h2{
@@ -237,7 +236,8 @@ font-weight: bold;
 .temp{
   display: flex;
   justify-content: space-around;
-  transform: translateY(25%);
+  margin-top: 25%;
+  transform: translateY(-50%);
   align-items: center;
 }
 
@@ -290,9 +290,16 @@ html{
 body{
   width: 100%;
   height: 100vh;
+
+}
+
+#app{
   background: var(--bg);
-
-
+  color: var(--colortext);
+  height: 100vh;
+  position: absolute;
+  margin-top: 0;
+  width: 100%;
 }
 
 /*Background*/
