--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -2,12 +2,13 @@
 @import "style-reset.css";
 @import "mise-en-page.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap');
+@import '~infinite-marquee/assets/css/infinite-marquee.css';
 
 
 :root{
-  --title: clamp(1.5rem, 3vw - 2rem, 4rem);
+  --title: clamp(3rem, 3vw - 2rem, 4rem);
   --heure: clamp(12rem, 24vw - 16rem, 24rem);
-  --subtitle: clamp(1rem, 3vw - 2rem, 3rem);
+  --subtitle: clamp(1.5rem, 3vw - 2rem, 4rem);
   --paragraphe: clamp(0.75rem, 2.75vw - 2rem, 3rem);
 
 }
@@ -34,6 +35,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+
 }
 
 
@@ -61,7 +63,7 @@ p, span, dt, dd {
 
 
 .circulation span {
-  font-size: var(--title);
+  font-size: var(--subtitle);
 }
 
 
