--- a/src/assets/css/mise-en-page.css
+++ b/src/assets/css/mise-en-page.css
@@ -1,6 +1,6 @@
 /*Toutes les pages*/
 .Gbloc {
-  height: 80vh;
+  height: 78.5vh;
   border-radius: 10px;
   width: 95%;
   padding: 3% 0;
@@ -33,6 +33,12 @@ h2{
   font-weight: bold; margin-left: 5%;
 }
 
+/*Accueil*/
+.Accueil{
+  transform: translateY(50%);
+  margin-top: -25.2%;
+}
+
 /*Anniversaire*/
 
 .anniv_container,.mot_container{
@@ -53,6 +59,10 @@ h2{
   padding-bottom: 5px;
 }
 
+#anniversairary > dl{
+  line-height: 2rem;
+}
+
 dd{
 font-weight: bold;
 }
@@ -61,21 +71,23 @@ font-weight: bold;
   width: 90%;
 }
 
-#demo1 > dl:last-child > span:last-child{
+#annivDay > dl:last-child > span:last-child{
   display: none;
 }
 
-#demo1 > h2:not(:first-of-type){
+
+
+#annivDay > h2:not(:first-of-type){
   display: none
 }
 
-#demo1{
+#annivDay{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-#demo1 h2{
+#annivDay h2{
   width: 100%;
   text-align: center;
   margin: 0;
@@ -89,7 +101,7 @@ font-weight: bold;
   justify-content: center;
   align-items: center;
   height: 30vh;
-  padding: 7% 0;
+  padding: 2% 0 8%;
 }
 
 #hyundaicolor,.kia{
@@ -146,7 +158,7 @@ font-weight: bold;
 }
 
 .change-size-svg {
-  width: 100px;
+  width: 67px;
   padding-right: 5%;
 }
 
@@ -184,13 +196,17 @@ font-weight: bold;
 
 }
 
+#mot > div > p:nth-child(3){
+  padding: 10px 0;
+}
+
 /*Twitter*/
 
 .trafic_container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 75vh;
+  height: 70vh;
   overflow: hidden;
 }
 
@@ -251,7 +267,7 @@ font-weight: bold;
 
 .temp span{
   font-weight: bold;
-  font-size: var(--title);
+  font-size: var(--subtitle);
 }
 
 /*heure*/
@@ -263,7 +279,7 @@ font-weight: bold;
 }
 
 .respheure{
-  width: 350px;
+  width: 285px;
 
 }
 
@@ -272,7 +288,7 @@ font-weight: bold;
 .all{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   flex-grow: 1;
   margin-top: 40px;
@@ -280,6 +296,11 @@ font-weight: bold;
 
 .col1, .col2, .col3{
   width: 26%;
+}
+
+.col2{
+  width: 32%;
+  margin: 0 48px;
 }
 
 html{
@@ -330,6 +351,32 @@ body{
 
 #mot.bloc,#anniv.bloc{
     height: auto!important;
+}
+
+
+/*Infinite marquee*/
+
+.marqueeInfinite {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.marqueeInfinite > * {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  width: -moz-max-content;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: transform;
+}
+
+.marqueeInfinite > * > * {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  display: inline-block;
 }
 
 
